# VNE-CLI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: flow-format.md  providers.md
docs-site/: index.html
examples/: project-config.toml  user-config.toml
src/vne_cli/: __init__.py  cli.py
src/vne_cli/assembly/: __init__.py  asset_organizer.py  flow_writer.py  project_builder.py  validator.py
src/vne_cli/assets/: __init__.py  downloader.py  manifest.py  pipeline.py  prompt_builder.py
src/vne_cli/commands/: assemble.py  extract.py  generate_assets.py
src/vne_cli/config/: __init__.py  credentials.py  loader.py  schema.py
src/vne_cli/extraction/: __init__.py  branch_detector.py  character_pass.py  chunker.py  structure_pass.py  validator.py
src/vne_cli/flow/: __init__.py  cinematic.py  graph.py  nodes.py  orchestrator.py  pins.py  scene_compiler.py  serializer.py
src/vne_cli/providers/: __init__.py  base.py  errors.py  registry.py
src/vne_cli/providers/image/: __init__.py  dalle_provider.py  stable_diffusion_provider.py
src/vne_cli/providers/llm/: __init__.py  anthropic_provider.py  openai_provider.py
src/vne_cli/schemas/: __init__.py  asset_manifest.py  characters.py  flow_schema.py  story.py
src/vne_cli/utils/: __init__.py  logging.py  paths.py  retry.py
tests/: conftest.py
tests/integration/: conftest.py  flow_validator.py  test_e2e_pipeline.py  test_pipeline.py
tests/integration/fixtures/: branching_novel.txt  minimal_novel.txt  sample_novel.txt
tests/unit/: test_assembly.py  test_assets.py  test_branch_detector.py  test_character_pass.py  test_chunker.py  test_config.py  test_credentials.py  test_flow_graph.py  test_providers.py  test_validator.py
