[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vne-cli"
version = "0.1.0"
description = "Generate complete VoidNovelEngine visual novel projects from novel text"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "VNE-CLI Contributors" },
]
keywords = ["visual-novel", "vne", "cli", "game-development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9,<1.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "Pillow>=10.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli_w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
vne = "vne_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vne_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/vne_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
